# mdi

./: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_COMPLETE.md  BENCHMARK_GUIDE.md  BENCHMARK_SUMMARY.md  Cargo.toml  IMPLEMENTATION.md  README.md  README_ZH.md  bench.sh  main.s  memo.md
benches/: fibonacci.rs  mdi_bench.rs
examples/: demo.rs  perf_test.rs  quick_bench.rs
src/: affinity.rs  distributor.rs  kline.rs  lib.rs  main.rs  models.rs  queue.rs  receiver.rs  storage.rs
tests/: test_affinity.rs  test_distributor.rs  test_kline.rs  test_models.rs  test_queue.rs  test_receiver.rs  test_storage.rs
